Closed Bug 24735 Opened 25 years ago Closed 25 years ago

Printing causes mozilla to crash

Categories

(Core :: Printing: Output, defect, P1)

x86
Linux
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: anantk, Assigned: blizzard)

References

()

Details

(Keywords: crash, Whiteboard: [PDT+] blizzard estimates 2/15 fix)

Ok the following operations cause mozilla to crash consistently on my machine -> Start mozilla -> Go to bugzilla.mozilla.org -> Select search for bug -> Print to file setting the bottom and right margins to .50 (I use the file /var/tmp/netscape.ps) -> Once it's done printing do the exact same thing again on the same file (/var/tmp/netscape.ps) -> This causes the browser to crash with a segfault
Sorry my system settings are as follows: Printer : Brother MFC P-2000 (Masquerading as a Laserjet II) Althought this should not matter as I am printing to a file OS Details : Linux 2.3.39, Debian potato Print Filter : Magic filter ( This should also not matter as I am printing to a file)
Looks like scrolling code. Assigning to blizzard. Was easy to reproduce on RH 6.1. #0 0x4080ae44 in gtk_type_check_object_cast () from /usr/lib/libgtk-1.2.so.0 #1 0x406e764e in nsScrollbar::SetParameters (this=0x8503100, aMaxRange=0, aThumbSize=0, aPosition=0, aLineIncrement=0) at nsScrollbar.cpp:303 #2 0x414c44fd in nsScrollingView::ComputeScrollOffsets (this=0x8ac8750, aAdjustWidgets=1) at nsScrollingView.cpp:1180 #3 0x414c47d6 in nsScrollingView::SetScrollPreference (this=0x8ac8750, aPref=nsScrollPreference_kAuto) at nsScrollingView.cpp:1239 #4 0x410845c2 in ?? () from /opt/raptor/ns/dist/bin/components/libraptorhtml.so #5 0x41083aff in ?? () from /opt/raptor/ns/dist/bin/components/libraptorhtml.so #6 0x4117c2a7 in ?? () from /opt/raptor/ns/dist/bin/components/libraptorhtml.so #7 0x411a8133 in ?? () from /opt/raptor/ns/dist/bin/components/libraptorhtml.so #8 0x411a2e70 in ?? () from /opt/raptor/ns/dist/bin/components/libraptorhtml.so #9 0x411a2ce6 in ?? () from /opt/raptor/ns/dist/bin/components/libraptorhtml.so #10 0x411a3a41 in ?? () from /opt/raptor/ns/dist/bin/components/libraptorhtml.so #11 0x411a8650 in ?? () from /opt/raptor/ns/dist/bin/components/libraptorhtml.so
Assignee: syd → blizzard
Severity: major → critical
Priority: P3 → P1
Summary: Printing causes mozilla to crash → [DOGFOOD] Printing causes mozilla to crash
Putting on pdt+ radar.
Whiteboard: [PDT+]
Putting on M14 radar.
Target Milestone: M14
Adding "crash" keyword to all known open crasher bugs.
Keywords: crash
Marking as a beta1 bug.
Keywords: beta1
Also taking ownership.
Status: NEW → ASSIGNED
Keywords: dogfood
Summary: [DOGFOOD] Printing causes mozilla to crash → Printing causes mozilla to crash
Whiteboard: [PDT+] → [PDT+] blizzard estimates 2/15 fix
I have a patch for this. It's just an inititialized variable but I still need a review.
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Verified with linux build(2000021409m14)
Status: RESOLVED → VERIFIED
I was crashing last night printing www.cnn.com.
I tried the steps as mentioned by the bug opener. ie printing to a file and it works fine in today's build. These same steps used to crash the browser earlier.
Yeah, this is probably not the same bug. I found a specific problem exposed with those exact steps.
Please ignore the spam. Changing address.
Assignee: blizzard → blizzard
Status: VERIFIED → NEW
busted with my reassign
Status: NEW → RESOLVED
Closed: 25 years ago25 years ago
busted with my reassign
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.