fix for printing crash, bug #24735.  make sure that mAdjustment is initialized in the constructor. r=tor